--- a/index.html
+++ b/index.html
@@ -1390,7 +1390,7 @@ ${funFact ? `- ⚡ **Fun fact:** ${funFact}\n` : ''}
 ⭐ **Passionate about technology and innovation**
 
 </div>`;
-
+//hello git
                 
                 previewContent.textContent = readmeContent;
             }
@@ -1415,3 +1415,4 @@ ${funFact ? `- ⚡ **Fun fact:** ${funFact}\n` : ''}
     </script>
 </body>
 </html>
+
